@@ -19,7 +19,7 @@ print "ok 1\n";
 ######################### End of black magic.
 
 my %h;
-my $folder="Mail::TieFolder.tmp$$";
+my $folder="+/tmp/Mail::TieFolder.tmp$$";
 
 
 use Mail::Internet;
@@ -34,40 +34,40 @@ tie (%h, 'Mail::TieFolder', 'mh', $folder, {'unseen' => 0}) && print "ok 3\n";
 # store
 $h{'new'} = $msg1;
 # should be seen
-chomp($unseen = `pick +$folder unseen 2>/dev/null`);
+chomp($unseen = `pick $folder unseen 2>/dev/null`);
 print "ok 4\n" unless $unseen;
 # read
 print "ok 5\n" if $h{'<200011112208.OAA20760@roton.terraluna.org>'};
 # should be seen
-chomp($unseen = `pick +$folder unseen 2>/dev/null`);
+chomp($unseen = `pick $folder unseen 2>/dev/null`);
 print "ok 6\n" unless $unseen;
-`rmf +$folder`;
+`rmf $folder`;
 
 # check unseen, unseen flag on
 tie (%h, 'Mail::TieFolder', 'mh', $folder, {'unseen' => 1}) && print "ok 7\n";
 # store
 $h{'new'} = $msg1;
 # should be unseen
-chomp($unseen = `pick +$folder unseen`);
+chomp($unseen = `pick $folder unseen`);
 print "ok 8\n" if $unseen == 1;
 # read
 print "ok 9\n" if $h{'<200011112208.OAA20760@roton.terraluna.org>'};
 # should be unseen
-chomp($unseen = `pick +$folder unseen`);
+chomp($unseen = `pick $folder unseen`);
 print "ok 10\n" if $unseen == 1;
-`rmf +$folder`;
+`rmf $folder`;
 
 # check unseen, no unseen flag (defaults to on)
 tie (%h, 'Mail::TieFolder', 'mh', $folder) && print "ok 11\n";
 # store
 $h{'new'} = $msg1;
 # should be unseen
-chomp($unseen = `pick +$folder unseen`);
+chomp($unseen = `pick $folder unseen`);
 print "ok 12\n" if $unseen == 1;
 # read
 print "ok 13\n" if $h{'<200011112208.OAA20760@roton.terraluna.org>'};
 # should be unseen
-chomp($unseen = `pick +$folder unseen`);
+chomp($unseen = `pick $folder unseen`);
 print "ok 14\n" if $unseen == 1;
-`rmf +$folder`;
+`rmf $folder`;
 
